--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--Update with your name-->
       <h1>Darcy</h1>
       
-      <p>This is my website for <i>IML300 class</i>. (Write a little bit about yourself here.）</p>
+      <p>This is my website for <i>IML300 class</i>. I am a freshman in Media Art + Practice. My passions are ealry 2000s band tees, media repersenation video essays, Kpop photocards, fencing, and concert photography.</p>
     </div>
 
     <div>
