--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <!--Update with your name-->
       <h1>Darcy</h1>
       
-      <p>This is my website for <i>IML300 class</i>. I am a freshman in Media Art + Practice. My passions are ealry 2000s band tees, media repersenation video essays, Kpop photocards, fencing, and concert photography.</p>
+      <p>This is my website for <i>IML300 class</i>. I am a freshman in Media Art + Practice. My passions are ealry 2000s band tees, media troupe video essays, Kpop photocards, fencing, and concert photography.</p>
     </div>
 
     <div>
       <h1>Presentation</h1>
-      <a href="">Pecha Kucha: Lorem Ipsum</a>
+      <a href="">Pecha Kucha: Not Made Yet</a>
     </div>
 
     <div>
