--- a/project-3/index.html
+++ b/project-3/index.html
@@ -23,7 +23,9 @@
     
     <h2 class = "section_title" id="right_section_title">Draw</h2>
     
+    <div class="background-sketch">
     <iframe src="https://editor.p5js.org/dlhatche/full/abWKxVgYc"></iframe>
+    </div>
 
 </body>
 
