--- a/project-3/index.html
+++ b/project-3/index.html
@@ -23,9 +23,7 @@
     
     <h2 class = "section_title" id="right_section_title">Draw</h2>
     
-    <div class="background-sketch">
-    <iframe src="https://editor.p5js.org/dlhatche/full/abWKxVgYc"></iframe>
-    </div>
+    <iframe src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" id ="middle_sketch"></iframe>
 
 </body>
 
