--- a/project-3/index.html
+++ b/project-3/index.html
@@ -15,7 +15,13 @@
 </head>
 
 <body>
-   <iframe src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" id="middle_sketch"></iframe>
+   
+   <iframe id="left_sketch"
+   src="https://editor.p5js.org/dlhatche/full/-rrkC00IW"></iframe>
+   
+   <iframe id="middle_sketch" src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" ></iframe>
+   
+   
     <h1 id="main_title">Biracial Babies Grow into Biracial Adults </h1>
 
     <h2 class="section_title" id="middle_section_title">Information</h2>
