--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+   <style>
+body {
+  height: 3000px;
+  background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 51%, #BEBEBE 75%);
+}
+</style>
     <meta charset="UTF-8">
     <title>Document</title>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
