--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
 <head>
    <style>
 body {
-  height: 3000px;
-  background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 51%, #BEBEBE 75%);
+  height: 4000px;
+  background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 50%, #BEBEBE 75%);
 }
 </style>
     <meta charset="UTF-8">
@@ -17,7 +21,7 @@ body {
 </head>
 
 <body>
-    <h1>Page 2</h1>
+    <h1 class="section_page_title">Gallery</h1>
    
 
 </body>
