draw section added

--- a/project-3/index.html
+++ b/project-3/index.html
@@ -19,6 +19,9 @@
    <iframe id="left_sketch"
    src="https://editor.p5js.org/dlhatche/full/-rrkC00IW"></iframe>
    
+   
+   <iframe  id="right_sketch" src="https://editor.p5js.org/dlhatche/full/s9BugeUhJ"></iframe>
+   
    <iframe id="middle_sketch" src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" ></iframe>
    
    
