--- a/project-3/index.html
+++ b/project-3/index.html
@@ -25,13 +25,15 @@
    <iframe id="middle_sketch" src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" ></iframe>
    
    
-    <h1 id="main_title">Biracial Babies Grow into Biracial Adults </h1>
+    <h1 id="main_title">
+    Biracial Babies Grow into Biracial Adults </h1>
 
-    <h2 class="section_title" id="middle_section_title">Information</h2>
+    <h2 class="section_title" id="middle_section_title"><a href="index.html">Information</a></h2>
+    
 
-    <h2 class="section_title" id="left_section_title">Gallery</h2>
+    <h2 class="section_title" id="left_section_title"><a href="gallery.html">Gallery</a></h2>
 
-    <h2 class="section_title" id="right_section_title">Draw</h2>
+    <h2 class="section_title" id="right_section_title"><a href="draw.html">Draw</a></h2>
 
     
 
