--- a/project-3/draw.html
+++ b/project-3/draw.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Firebase p5.js Canvas Demo</title>
+    <title>Draw - Biracial Babies Grow into Biracial Adults</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,19 +30,20 @@
 </head>
 
 <body>
-    <h1 class="section_page_title">Draw</h1>
-
-
     <div id="container">
-        <h2>Firebase p5.js Canvas Demo</h2>
-        <p>Draw or/and drop an image on the canvas, then click the 'save' button.</p>
+       <h1 class = "section_page_title "> Draw</h1>
+        <p>Draw or/and drop an picture on the canvas, then click the 'save' button.
+        </p>
+        <p>Draw how you feel, reclaim a baby picture, write a quote, contribute to this page however you would like
+        </p>
         <div id="canvasContainer"></div>
 
         <button id="saveButton">save</button>
         <button id="clearButton">clear</button>
 
         <div id="drawingContainer"></div>
+        
     </div>
 
-
+ <h2 class="back_title"><a href="index.html">Back</a></h2>
 </body></html>
