--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -23,7 +23,7 @@ body {
 <body>
     <h1 class="section_page_title">Gallery</h1>
    
-
+ <h2 class="section_title"><a href="index.html">Back</a></h2>
 </body>
 
 </html>
