--- a/project-3/index.html
+++ b/project-3/index.html
@@ -7,7 +7,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Biracial Babies Grow into Biracial Adults</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
@@ -28,7 +28,7 @@
     <h1 id="main_title">
     Biracial Babies Grow into Biracial Adults </h1>
 
-    <h2 class="section_title" id="middle_section_title"><a href="index.html">Information</a></h2>
+    <h2 class="section_title" id="middle_section_title"><a href="information.html">Information</a></h2>
     
 
     <h2 class="section_title" id="left_section_title"><a href="gallery.html">Gallery</a></h2>
