--- a/project-3/information.html
+++ b/project-3/information.html
@@ -8,12 +8,12 @@
 <head>
    <style>
 body {
-  height: 4000px;
+  height: 7000px;
   background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 50%, #BEBEBE 75%);
 }
 </style>
     <meta charset="UTF-8">
-    <title>Gallery - Biracial Babies Grow into Biracial Adults</title>    
+    <title>Information - Biracial Babies Grow into Biracial Adults</title> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
@@ -21,7 +21,7 @@ body {
 </head>
 
 <body>
-    <h1 class="section_page_title">Gallery</h1>
+    <h1 class="section_page_title">Information</h1>
    
  <h2 class="back_title"><a href="index.html">Back</a></h2>
 </body>
