--- a/project-3/information.html
+++ b/project-3/information.html
@@ -8,8 +8,8 @@
 <head>
    <style>
 body {
-  height: 7000px;
-  background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 50%, #BEBEBE 75%);
+  height: 10000px;
+  background: linear-gradient(141deg, #D8D8D8 0%, #555555 50%, #101010 75%);
 }
 </style>
     <meta charset="UTF-8">
@@ -24,6 +24,7 @@ body {
     <h1 class="section_page_title">Information</h1>
    
  <h2 class="back_title"><a href="index.html">Back</a></h2>
+ 
 </body>
 
 </html>
