--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -6,14 +6,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
 <head>
-   <style>
-body {
-  height: 4000px;
-  background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 50%, #BEBEBE 75%);
-}
-</style>
+    <style>
+        body {
+            height: 4000px;
+            background: linear-gradient(141deg, #F4F4F4 0%, #D8D8D8 50%, #BEBEBE 75%);
+        }
+    </style>
     <meta charset="UTF-8">
-    <title>Gallery - Biracial Babies Grow into Biracial Adults</title>    
+    <title>Gallery - Biracial Babies Grow into Biracial Adults</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
@@ -22,8 +22,35 @@ body {
 
 <body>
     <h1 class="section_page_title">Gallery</h1>
-   
- <h2 class="back_title"><a href="index.html">Back</a></h2>
-</body>
 
-</html>
+    <h2 class="back_title"><a href="index.html">Back</a></h2>
+
+
+    <div class="grid-container">
+        <div class="grid-item">
+            <img src="/project-3/asset/Bennie_Adult.jpg" alt="Adult Bennie">
+        </div>
+
+        <div class="grid-item">
+            <img src="/project-3/asset/Soul_Adult.jpg" alt="Adult Soul">
+        </div>
+
+        <div class="grid-item">
+            <img src="/project-3/asset/Julia_Adult.jpg" alt="Adult Julia">
+        </div>
+
+        <div class="grid-item">
+            <img src="/project-3/asset/Johnas_Adult.jpg" alt="Adult Johans">
+        </div>
+
+        <div class="grid-item">
+            <img src="/project-3/asset/Mila_Adult.jpg" alt="Adult Mila">
+        </div>
+
+        <div class="grid-item">
+            <img src="/project-3/asset/Victoria_Adult.jpg" alt="Adult Victoria">
+        </div>
+
+    </div>
+
+</body></html>
