--- a/project-3/index.html
+++ b/project-3/index.html
@@ -15,26 +15,27 @@
 </head>
 
 <body>
-   
-   <iframe id="left_sketch"
-   src="https://editor.p5js.org/dlhatche/full/-rrkC00IW"></iframe>
-   
-   
-   <iframe  id="right_sketch" src="https://editor.p5js.org/dlhatche/full/s9BugeUhJ"></iframe>
-   
-   <iframe id="middle_sketch" src="https://editor.p5js.org/dlhatche/full/abWKxVgYc" ></iframe>
-   
-   
+
+    <iframe id="left_sketch" src="https://editor.p5js.org/dlhatche/full/-rrkC00IW"></iframe>
+
+
+    <iframe id="right_sketch" src="https://editor.p5js.org/dlhatche/full/s9BugeUhJ"></iframe>
+
+    <iframe id="middle_sketch" src="https://editor.p5js.org/dlhatche/full/abWKxVgYc"></iframe>
+
+
     <h1 id="main_title">
-    Biracial Babies Grow into Biracial Adults </h1>
+        Biracial Babies Grow into Biracial Adults </h1>
 
     <h2 class="section_title" id="middle_section_title"><a href="information.html">Information</a></h2>
-    
+
 
     <h2 class="section_title" id="left_section_title"><a href="gallery.html">Gallery</a></h2>
 
     <h2 class="section_title" id="right_section_title"><a href="draw.html">Draw</a></h2>
 
-    
 
-</body></html>
+
+</body>
+
+</html>
