--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -83,10 +83,14 @@
             <img src="/project-3/asset/Destinee_Adult.jpg" alt="Adult Destinee: No Quote">
         </div>
 
+ <div class="grid-item">
+            <img src="/project-3/asset/Alexa_Adult.jpg" alt="Adult Alexa: No Quote">
+        </div>
 
-
-
-
+    <div class="grid-item">
+            <img src="/project-3/asset/Ben_Adult.jpg" alt="Adult Ben: No Quote ">
+        </div>
+   
     </div>
 
 </body></html>
