--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -11,6 +11,7 @@
             height: 2300px;
             background: linear-gradient(141deg, #e0e0e0 0%, #c9c9c9 50%, #a3a0a0 75%);
         }
+
     </style>
     <meta charset="UTF-8">
     <title>Gallery - Biracial Babies Grow into Biracial Adults</title>
@@ -29,90 +30,121 @@
     <p>The only way to view an individual's baby picture is to click, where you will see their name and often a quote about their experiences. This way multiracial people are no longer objects to be viewed on the internet but people with names and life experiences.</p>
 
     <div class="grid-container">
+
+        <div class="grid-item">
+            <div class="accordian">
+                <input type="image" class="image-button" src="/project-3/asset/Bennie_Adult.jpg" name="Adult_Bennie" alt="Adult Bennie: Quote" />
+                <div class="accordian_content">
+                    <p>Bennie</p>
+                </div>
+            </div>
+
+
+            <!--
         <div class="grid-item">
             <img src="/project-3/asset/Bennie_Adult.jpg" alt="Adult Bennie: Quote">
 
         </div>
+-->
 
-        <div class="grid-item">
-            <img src="/project-3/asset/Soul_Adult.jpg" alt="Adult Soul: Quote">
+            <div class="grid-item">
+                <img src="/project-3/asset/Soul_Adult.jpg" alt="Adult Soul: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Sunya_Adult.jpeg" alt="Adult Sunya: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Max_Adult.jpg" alt="Adult Max: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Victoria_Adult.jpg" alt="Adult Victoria: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Veronica_Adult.jpeg" alt="Adult Veronica: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Mila_Adult.jpg" alt="Adult Mila: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Briana_Adult.jpg" alt="Adult Briana: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Ashely_Adult.jpg" alt="Adult Ashley: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Isa_Adult.jpg" alt="Adult Isa: Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Julia_Adult.jpg" alt="Adult Julia: No Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Johnas_Adult.jpg" alt="Adult Johans: No Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Leila_Adult.jpg" alt="Adult Leila: No Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Destinee_Adult.jpg" alt="Adult Destinee: No Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Alexa_Adult.jpg" alt="Adult Alexa: No Quote">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Ben_Adult.jpg" alt="Adult Ben: No Quote ">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Jaliyah_Adult.jpeg" alt="Adult Jaliyah: No Quote ">
+            </div>
+
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Halle_Adult.jpeg" alt="Adult Halle: No Quote ">
+            </div>
+
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Nolan_Adult.jpeg" alt="Adult Nolan: No Quote ">
+            </div>
+
+            <div class="grid-item">
+                <img src="/project-3/asset/Darcy2_Adult.jpg" alt="Adult Darcy:Quote ">
+            </div>
+
+
         </div>
 
-        <div class="grid-item">
-            <img src="/project-3/asset/Sunya_Adult.jpeg" alt="Adult Sunya: Quote">
-        </div>
+        <script>
+            document.querySelectorAll('.image-button').forEach(image => {
+                image.addEventListener('click',() =>{
+                    const accordianContent = image.nextElementSibling;
+                    
+                    image.classList.toggle('image-button--active');
+                    
+                    if(image.classList.contains('image-button--active')){
+                        accordianContent.style.maxHeight = accordianContent.scrollHeight + 'px';
+                    }else{
+                        accordianContent.style.maxHeight = 0;
+                    }
+                });
+            });
 
-        <div class="grid-item">
-            <img src="/project-3/asset/Max_Adult.jpg" alt="Adult Max: Quote">
-        </div>
+        </script>
 
-        <div class="grid-item">
-            <img src="/project-3/asset/Victoria_Adult.jpg" alt="Adult Victoria: Quote">
-        </div>
+</body>
 
-        <div class="grid-item">
-            <img src="/project-3/asset/Veronica_Adult.jpeg" alt="Adult Veronica: Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Mila_Adult.jpg" alt="Adult Mila: Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Briana_Adult.jpg" alt="Adult Briana: Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Ashely_Adult.jpg" alt="Adult Ashley: Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Isa_Adult.jpg" alt="Adult Isa: Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Julia_Adult.jpg" alt="Adult Julia: No Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Johnas_Adult.jpg" alt="Adult Johans: No Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Leila_Adult.jpg" alt="Adult Leila: No Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Destinee_Adult.jpg" alt="Adult Destinee: No Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Alexa_Adult.jpg" alt="Adult Alexa: No Quote">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Ben_Adult.jpg" alt="Adult Ben: No Quote ">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Jaliyah_Adult.jpeg" alt="Adult Jaliyah: No Quote ">
-        </div>
-
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Halle_Adult.jpeg" alt="Adult Halle: No Quote ">
-        </div>
-
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Nolan_Adult.jpeg" alt="Adult Nolan: No Quote ">
-        </div>
-
-        <div class="grid-item">
-            <img src="/project-3/asset/Darcy2_Adult.jpg" alt="Adult Darcy:Quote ">
-        </div>
-
-
-    </div>
-
-</body></html>
+</html>
