--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -35,17 +35,14 @@
             <div class="accordian">
                 <input type="image" class="image-button" src="/project-3/asset/Bennie_Adult.jpg" name="Adult_Bennie" alt="Adult Bennie: Quote" />
                 <div class="accordian_content">
-                    <p>Bennie</p>
+                   <img class="baby_pictures" src="/project-3/asset/Bennie_Baby.jpg" alt="Baby Bennoe">
+                    <p class="person_name">Bennie</p>
+                    <p class="person_quote">"quaters and stuff"</p>
                 </div>
             </div>
 
 
-            <!--
-        <div class="grid-item">
-            <img src="/project-3/asset/Bennie_Adult.jpg" alt="Adult Bennie: Quote">
-
-        </div>
--->
+            <!-- DO THIS TO THE REST OF THE PICTURES-->
 
             <div class="grid-item">
                 <img src="/project-3/asset/Soul_Adult.jpg" alt="Adult Soul: Quote">
