starting info page

--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -8,7 +8,7 @@
 <head>
     <style>
         body {
-            height: 3250px;
+            height: 3000px;
             background: linear-gradient(141deg, #e0e0e0 0%, #c9c9c9 50%, #a3a0a0 75%);
         }
 
@@ -239,7 +239,7 @@
                 <div class="accordian_content">
                     <img class="baby_pictures" src="/project-3/asset/Darcy2_Baby.JPG" alt="Baby Darcy">
                     <p class="person_name">Darcy</p>
-                    <p class="person_quote">"I included a picture with me and my mom because I was gonna talk about how I look pretty different from her."</p>
+                    <p class="person_quote">"Many biracial adults are fetishized, alienated, unrepresented yet because the experience is so diverse the topic is rarely broached. I wanted to thank you for viewing this website."</p>
                 </div>
             </div>
         </div>
