--- a/project-3/information.html
+++ b/project-3/information.html
@@ -25,6 +25,13 @@
     <h1 class="section_page_title">Information</h1>
 
     <h2 class="back_title"><a href="index.html">Back</a></h2>
+    
+    <p>As a biracial person, you get some bizarre reactions when you tell people your ethnicity, “Can you say [insert any racial slur]?”, “Oreo, coconut, banana”, and “That’s so trendy, I wish I was you.” Yet the most uncomfortable reaction is when the person pulls out their device and proceeds to show you pictures of multiracial babies. They say something along the lines of “Biracial babies are adorable, I want to have a baby with a  [insert any ethnicity] person so that I can have cute kids.” Treating having a child as if it is a trip to the Build-A-Bear Workshop.</p>
+    
+    <p>I came to realize that these are not a few select individuals with bizarre eugenic hopes, but there are vast online communities dedicated to wanting biracial children solely based on their looks. What people fail to realize is biracial babies grow into biracial adults, they aren’t cute forever but they will forever be people who have to negotiate their intersectional social identity. This website was created to educate people on this issue, make space for biracial voices, and provide a safe space for biracial voices. Below is more information along with quotes from individuals from the gallery to prove that these online ideologies have real-life effects.</p>
+
+
+
 
 </body>
 
