--- a/project-3/information.html
+++ b/project-3/information.html
@@ -35,6 +35,9 @@
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">is it just me or theres something kinda wrong with this <a href="https://t.co/GgzJO1xTjL">pic.twitter.com/GgzJO1xTjL</a></p>&mdash; rem ?! (@xercexe) <a href="https://twitter.com/xercexe/status/1313366190857711621?ref_src=twsrc%5Etfw">October 6, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=2533343532040920" height="664" width="450" frameborder="0" scrolling="no" ></iframe>
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=123989795980865162" height="646" width="450" frameborder="0" scrolling="no" ></iframe>
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=4011087155163177" height="657" width="450" frameborder="0" scrolling="no" ></iframe>
 
 </body>
 
