--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -59,7 +59,7 @@
                 <div class="accordian_content">
                     <img class="baby_pictures" src="/project-3/asset/Sunya_Baby.jpeg" alt="Baby Sunya">
                     <p class="person_name">Sunya</p>
-                    <p class="person_quote">“The colorism definitely took place in my “desexualization” and being equated with masculinity which definitely affected who I am today.”</p>
+                    <p class="person_quote">“The colorism definitely took place in my 'desexualization' and being equated with masculinity which definitely affected who I am today.”</p>
                 </div>
             </div>
         </div>
