--- a/project-3/gallery.html
+++ b/project-3/gallery.html
@@ -37,7 +37,7 @@
                 <div class="accordian_content">
                     <img class="baby_pictures" src="/project-3/asset/Bennie_Baby.jpg" alt="Baby Bennie">
                     <p class="person_name">Bennie<br> </p>
-                    <p class="person_quote">“If I had a penny for every person who ever said to me “you look exotic” or “you look ethnically ambiguous” I would be financially stable”</p>
+                    <p class="person_quote">“If I had a penny for every person who ever said to me 'you look exotic' or 'you look ethnically ambiguous' I would be financially stable”</p>
                 </div>
             </div>
         </div>
