--- a/project-3/information.html
+++ b/project-3/information.html
@@ -105,5 +105,8 @@
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=2533343532040920" height="664" width="450" frameborder="0" scrolling="no"></iframe>
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=123989795980865162" height="646" width="450" frameborder="0" scrolling="no"></iframe>
     <iframe src="https://assets.pinterest.com/ext/embed.html?id=4011087155163177" height="657" width="450" frameborder="0" scrolling="no"></iframe>
+    
+    
+    <p>Light eyes, loose curls, and light tan skin are traits that are commonly seen in biracial individuals of European and African Descent. During slavery in America, these traits were seen in slaves who were products of rape from slave owners and their slaves. These lighter-skinned slaves were given perfertial treatments becuase of their skin tone, Euporean Descence, and connection to the slave master. This treatment continued to effect the Black community after slavery with things such as <a href="https://allthatsinteresting.com/brown-paper-bag-test">the Brown Paper Bag Test</a>. This treatment is still seen today as many biracial actors will be casted in fully Black roles. Take Zendaya in Disney Channel's K.C. Undercover as an example.</p>
 
 </body></html>
