final fixed pics

--- a/project-3/information.html
+++ b/project-3/information.html
@@ -119,7 +119,7 @@
     <p>Light eyes, loose curls, and light tan skin are traits that are commonly seen in biracial individuals of European and African Descent. During slavery in America, these traits were seen in slaves who were products of rape from slave owners and their slaves. These lighter-skinned slaves were given preferential treatments because of their skin tone, European descent, and connection to the slave master. This treatment continued to affect the Black community after slavery with things such as <a href="https://allthatsinteresting.com/brown-paper-bag-test">the Brown Paper Bag Test</a>. This treatment is still seen today as many biracial actors will be cast in fully Black roles. Take Zendaya in Disney Channel's K.C. Undercover as an example.</p>
 
     <div class="center_media">
-        <img src="/project-3/asset/KCUndercover.jpeg" alt="K.C.Undercover" width="1000" height="700">
+        <img src="asset/KCUndercover.jpeg" alt="K.C.Undercover" width="1000" height="700">
     </div>
 
     <p><a href="gallery.html">Both Soul and Veronica</a> talk about how this praise of more eurocentric features in the Black community has affected their lives: </p>
