--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div>
         <!--Update with your name-->
-        <h1>Darcy</h1>
+        <h1>Darcy Hatcher</h1>
 
         <p>This is my website for <i>IML300 class</i>. I am a freshman in Media Art + Practice. My passions are ealry 2000s band tees, media troupe video essays, Kpop photocards, fencing, and concert photography.</p>
     </div>
@@ -65,7 +65,7 @@
     </div>
 
     <h1>Thoughts</h1>
-
+    <p>I had never looked at web design as an artform. Mainly I was taught that computer science was a good carreer skill to have growing up. P5js chnaged my view, it as playful and did not forced the corapate idea of wed design onto the user. Along with artists like Olia Lialina who advocate for a the Old Internet Aesthetic, of uncontroled personal art on the web, realized that computer sceince and web design can be played with just like any other artform. </p>
     <footer>Spring, 2022.</footer>
 </body>
 
